--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=back-end
 
-spring.datasource.url=jdbc:mysql://<mysql_host>/cms?usessl=false
+spring.datasource.url=jdbc:mysql://172.21.76.30/cms?usessl=false
 spring.datasource.username=root
 
-spring.datasource.password=<mysql_password>
+spring.datasource.password=LBJFbXbePB6V3CUB9yGb7Ldx
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 
-spring.data.mongodb.uri=mongodb://root:<mongodb_password>@<mongodb_host>:27017/prescriptions?authSource=admin"
+spring.data.mongodb.uri=mongodb://root:Bt1G4loOmBd5cKEyarEjlVkh@172.21.10.180:27017/prescriptions?authSource=admin"
 
 management.endpoint.health.show-details=always
 management.health.db.enabled=true
