--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=back-end
 
-spring.datasource.url=jdbc:mysql://172.21.162.102/cms?usessl=false
+spring.datasource.url=jdbc:mysql://172.21.206.144:3306/cms?usessl=false
 spring.datasource.username=root
 
-spring.datasource.password=7EypWNSbO8tpultN8Hi4G5Xc
+spring.datasource.password=RJK5UiJjh4gRq6FpY3MFECBT
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 
-spring.data.mongodb.uri=mongodb://root:KG8LAEJEXoaDkPLM0gl5OjJT@172.21.141.126:27017/prescriptions?authSource=admin"
+spring.data.mongodb.uri=mongodb://root:uZgZoks6TSZ9vM1cJSnHMVFG@172.21.4.228:27017/prescriptions?authSource=admin
 spring.web.resources.static-locations=classpath:/static/
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
