--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=back-end
 
-spring.datasource.url=jdbc:mysql://172.21.206.144:3306/cms?usessl=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cms?usessl=false
 spring.datasource.username=root
 
-spring.datasource.password=RJK5UiJjh4gRq6FpY3MFECBT
+spring.datasource.password=yourpassword
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
